infra/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: witylogix
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/part-of: witylogix
